--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
+		"@types/node": "^24.0.1",
 		"bits-ui": "^1.3.19",
 		"clsx": "^2.1.1",
 		"lucide-svelte": "^0.503.0",
